@@ -1600,10 +1600,10 @@ public class JaWEController extends Observable implements
                  JOptionPane.ERROR_MESSAGE);
          // ex.printStackTrace();
       } finally {
-         if (os!=null) {
+         if (os != null) {
             try {
                os.close();
-            } catch (Exception ex) {               
+            } catch (Exception ex) {
             }
          }
       }
@@ -2636,40 +2636,105 @@ public class JaWEController extends Observable implements
    }
 
    protected void updateTitle() {
-      String title = "";
+      String titleString = (String) getSettings().getSetting("TitleString");
+      if (titleString == null) {
+         titleString = "";
+      }
+      String filename = "";
+      String pkgId = "";
+      String pkgName = "";
+      String pkgVer = "";
+      String appName = JaWEManager.getInstance().getName();
+      String appVer = BuildInfo.getVersion() + "-" + BuildInfo.getRelease();
+      String appConfig = getCurrentConfigName();
+      if (appConfig == null) {
+         appConfig = "Default";
+      }
+      if (getMainPackage() != null) {
+         XPDLHandler xpdlh = JaWEManager.getInstance().getXPDLHandler();
+         filename = xpdlh.getAbsoluteFilePath(getMainPackage());
+         if (filename == null || filename.equals("")) {
+            filename = getSettings().getLanguageDependentString("NotSavedKey");
+         }
+         pkgId = getMainPackage().getId();
+         pkgName = getMainPackage().getName();
+         pkgVer = getMainPackage().getRedefinableHeader().getVersion();
+      }
+
+      String title = parseTitleString(titleString,
+                                      filename,
+                                      pkgId,
+                                      pkgName,
+                                      pkgVer,
+                                      appName,
+                                      appVer,
+                                      appConfig).trim();
+      while (title.startsWith("-")) {
+         title = title.substring(1);
+         title = title.trim();
+      }
+      title = title.replace("- -", "-");
+      title = title.replace("-  -", "-");
       if (getMainPackage() != null) {
          XPDLListenerAndObservable xpdllo = getXPDLListenerObservable(getMainPackage());
          if (xpdllo != null && xpdllo.isModified()) {
-            // System.out.println("WXPLD=" + xpdllo.getPackage().getId());
-            title = "*";
+            title = "*" + title;
          }
       }
 
-      title += JaWEManager.getInstance().getName()
-               + " " + BuildInfo.getVersion() + "-" + BuildInfo.getRelease();
-
-      String ccn = getCurrentConfigName();
-      if (ccn == null) {
-         ccn = "Default";
-      }
-      title += " ("
-               + ccn + " " + getSettings().getLanguageDependentString("ConfigurationKey")
-               + ")";
-
-      if (getMainPackage() != null) {
-         title += " - ";
-         XPDLHandler xpdlh = JaWEManager.getInstance().getXPDLHandler();
-         String s = xpdlh.getAbsoluteFilePath(getMainPackage());
-         if (s == null || s.equals("")) {
-            title += getSettings().getLanguageDependentString("NotSavedKey");
-         } else {
-            title += s;
-         }
-      }
       if (getJaWEFrame() != null) {
          getJaWEFrame().setTitle(title);
       }
 
+   }
+
+   protected String parseTitleString(String template,
+                                     String filename,
+                                     String pkgId,
+                                     String pkgName,
+                                     String pkgVer,
+                                     String appName,
+                                     String appVer,
+                                     String appConfig) {
+      String ret = template;
+
+      if (ret != null) {
+         if (-1 != template.indexOf("{filename}")) {
+            String strVal = filename != null ? filename : "";
+            ret = ret.replace("{filename}", strVal);
+         }
+         if (-1 != template.indexOf("{pkgId}")) {
+            String strVal = pkgId != null ? pkgId : "";
+            ret = ret.replace("{pkgId}", strVal);
+         }
+         if (-1 != template.indexOf("{pkgName}")) {
+            String strVal = pkgName != null && !pkgName.equals("") ? pkgName
+                                                                  : (pkgId != null ? pkgId
+                                                                                  : "");
+            ret = ret.replace("{pkgName}", strVal);
+         }
+         if (-1 != template.indexOf("{pkgVer}")) {
+            String strVal = pkgVer != null ? pkgVer : "";
+            ret = ret.replace("{pkgVer}", strVal);
+         }
+         if (-1 != template.indexOf("{appName}")) {
+            String strVal = appName != null ? appName : "";
+            ret = ret.replace("{appName}", strVal);
+         }
+         if (-1 != template.indexOf("{appVer}")) {
+            String strVal = appVer != null ? appVer : "";
+            ret = ret.replace("{appVer}", strVal);
+         }
+         if (-1 != template.indexOf("{appConfig}")) {
+            String strVal = appConfig != null ? appConfig
+                                                + " "
+                                                + getSettings().getLanguageDependentString("ConfigurationKey")
+                                             : "";
+            ret = ret.replace("{appConfig}", strVal);
+         }
+      }
+
+      return ret;
    }
 
    public JaWETypes getJaWETypes() {
