@@ -37,6 +37,9 @@
 #Encoding = UTF-8
 #DoNotAskOnDeletionOfReferencedElementTypes = Activity Transition
 
+# Possible placeholders to use to define application title are: {filename}, {pkgId}, {pkgName}, {pkgVer}, {appName}, {appVer}, {appConfig}
+#TitleString={pkgName} {pkgVer} - {appName} {appVer} ({appConfig})
+
 ######################## JAWE VIEW CONFIGURATION ##############################
 ############# FRAME
 #  *******************
